Fixed image alignment

--- a/src/sass/components/profile-template.scss
+++ b/src/sass/components/profile-template.scss
@@ -3,7 +3,7 @@
     padding:0 25px;
     .profile-img{
       width:95px;
-      min-height:95px;
+      height:95px;
       border-radius: 50%;
       border: 2px solid #915C80;
       display:inline-block;
